--- a/README.adoc
+++ b/README.adoc
@@ -3,7 +3,7 @@ ifdef::env-github,env-browser[:relfileprefix: docs/]
 
 https://travis-ci.com/AY1920S1-CS2103-T16-1/main[image:https://travis-ci.com/AY1920S1-CS2103-T16-1/main.svg?branch=master[Build Status]]
 
-image::docs/images/Ui_Welcome.png[width="600"]
+image::docs/images/Ui.png[width="600"]
 
 image::docs/images/Ui_Bio.png[width="600"]
 
