--- a/docs/team/shiyao821.adoc
+++ b/docs/team/shiyao821.adoc
@@ -72,7 +72,7 @@ As a librarian who may work after the sun has set, this command helps to switch 
 This feature was rather challenging as it required a decent amount of CSS knowledge and the ability to manipulate JavaFx elements.
 
 === *Code contributed* +
-[https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=shiyao821&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=false&groupSelect=groupByRepos&breakdown=false&until=2019-11-10[Code changes made by me (Tracked by RepoSense)]]
+https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=shiyao821&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=false&groupSelect=groupByRepos&breakdown=false&until=2019-11-10[Code changes made by me (Tracked by RepoSense)]
 
 === *Other contributions*
 ==== Project management
@@ -85,26 +85,29 @@ This is the final version of our software at Alpha release for final pre-release
 ** Bug fixes
 
 ==== Enhancements to existing features
-Done through the following pull requests:
-* [https://github.com/AY1920S1-CS2103T-F13-1/main/pull/292[#292]]: Updated sample data for users to test on
-* [https://github.com/AY1920S1-CS2103T-F13-1/main/pull/255[#255]]: Updated the GUI color scheme
-* [https://github.com/AY1920S1-CS2103T-F13-1/main/pull/84[#84]]: Created the relevant Storage classes for others to build on
+Done through the following pull requests: +
+
+* https://github.com/AY1920S1-CS2103T-F13-1/main/pull/292[#292]: Updated sample data for users to test on
+* [https://github.com/AY1920S1-CS2103T-F13-1/main/pull/255[#255]: Updated the GUI color scheme
+* [https://github.com/AY1920S1-CS2103T-F13-1/main/pull/84[#84]: Created the relevant Storage classes for others to build on
 
 ==== Documentation
-Done through the following pull requests:
-* [https://github.com/AY1920S1-CS2103T-F13-1/main/pull/277[#277]]: Styled the aesthetics of the LiBerry Netlify main page and sub-pages (including User Guide (UG) and Developer Guide (DG))
-* [https://github.com/AY1920S1-CS2103T-F13-1/main/pull/94[#94]]: Create the broad User Guide structure for others to build on
+Done through the following pull requests: +
+
+* [https://github.com/AY1920S1-CS2103T-F13-1/main/pull/277[#277]: Styled the aesthetics of the LiBerry Netlify main page and sub-pages (including User Guide (UG) and Developer Guide (DG))
+* [https://github.com/AY1920S1-CS2103T-F13-1/main/pull/94[#94]: Create the broad User Guide structure for others to build on
 
 ==== Community
-* Left a [https://github.com/nus-cs2103-AY1920S1/addressbook-level3/pull/58[DG review]] on another group's PR as a group
-* Posted a https://github.com/nus-cs2103-AY1920S1/forum/issues/115[tip] in the module forum (as a group) on making a code coverage check shortcut
-* Left a [https://github.com/nus-cs2103-AY1920S1/addressbook-level3/pull/49[User Stories review] on another group's PR as a group
-* Tested another team's [https://github.com/AY1920S1-CS2103T-F12-3/main/releases[PR]] and submitted bugs during Practical Exam Dry Run.
+
+* Left a https://github.com/nus-cs2103-AY1920S1/addressbook-level3/pull/58[DG review] on another group's PR as a group
+* Posted a [https://github.com/nus-cs2103-AY1920S1/forum/issues/115[tip] in the module forum (as a group) on making a code coverage check shortcut
+* Left a https://github.com/nus-cs2103-AY1920S1/addressbook-level3/pull/49[User Stories review] on another group's PR as a group
+* Tested another team's [https://github.com/AY1920S1-CS2103T-F12-3/main/releases[PR] and submitted bugs during Practical Exam Dry Run.
 
 == Contributions to the User Guide
 |===
 |_Given below are sections I have contributed to in the User Guide. They showcase my ability to write documentation targeting end-users.
-The official User Guide is linked [https://ay1920s1-cs2103t-f13-1.github.io/main/UserGuide.html[here]]._
+The official User Guide is linked https://ay1920s1-cs2103t-f13-1.github.io/main/UserGuide.html[here]._
 |===
 
 === User Guide: Find Command
@@ -126,7 +129,8 @@ include::../UserGuide.adoc[tag=UGshiyao2]
 == Contributions to the Developer Guide
 
 |===
-|_Given below are sections I have contributed to in the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
+|_Given below are sections I have contributed to in the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project.
+The official Developer Guide is linked https://ay1920s1-cs2103t-f13-1.github.io/main/DeveloperGuide.html[here]_
 |===
 
 Book Finding is the main feature that I have implemented in LiBerry. The following is an extract from the Developer Guide that describes and explains the feature.
