--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -82,7 +82,7 @@ Users can switch between respective windows in order to make full use of the app
 The `Engagement` window will be the default window upon starting the application.
 
 .Engagement (default) window displayed on start-up of the application.
-image::tab_1_default.png[width="520"]
+image::tab_1_default.png[width="500"]
 
 Now, if the user wants to switch to different windows, simply enter the tab command
 with refer to the menu name listed on the left end of the application window. For example, user enters `tab b/calendar`
@@ -97,7 +97,7 @@ Users who prefer using mouse over typing can alternatively click the green tabs 
 Below is the screenshot after entering the command.
 
 .tab switch successfully executed from engagement window to calendar window.
-image::tab_3.png[width="520"]
+image::tab_3.png[width="500"]
 
 //end::tab-command[]
 
@@ -355,7 +355,7 @@ User can generate multiple report documents with the same engagement, but with d
 System will not allow generating documents that already exists in the directory.
 
 .report document window
-image::pdf_1.png[width="520"]
+image::pdf_1.png[width="500"]
 
 Once user enters the command, system will automatically open the generated document and display the command result in the output panel, showing "Engagement Report successfully generated."
 
@@ -370,18 +370,20 @@ image::pdf_2.png[width="450"]
 User can also double click the list item in the documents explorer tree view to open the document file on their local computer file system. Below is the sample of generated document from the system.
 
 .pdf document sample
-image::pdf_sample.png[width="600", align="center"]
+image::pdf_sample.png[width="480", align="center"]
 
 If the user does not want to keep the document, instead of directing the actual directory in the local system, user can simply click the red `x` button, next to the refresh
 button to delete the selected document list item. Once system displays the popup message to confirm the user's decision, user will click the `OK` button to confirm deletion. Delete function will only available when user has pre-selected the document list item and the selected item must be a .pdf form, not directory.
 Below is the screenshot after user clicks the delete button.
 
 .pdf delete pop up message
-image::pdf_delete.png[width="520"]
+image::pdf_delete.png[width="450", float="left"]
+.pdf delete after clicking ok button
+image::pdf_delete_after.png[width="450"]
 
 Now, once system successfully deleted the selected document, system will display the status message above the documents explorer. Below is the screenshot of the system status message after deletion.
 
-image::pdf_delete_after.png[width="520"]
+
 
 NOTE: PDF generation and deletion operations cannot be undone via `undo` command.
 
