--- a/docs/team/zhixianggg.adoc
+++ b/docs/team/zhixianggg.adoc
@@ -13,10 +13,10 @@ Below is a summary of my contributions for this project.
 For our module CS2103T: Software Engineering, my team and I were tasked to enhance a desktop address book application called AddressBook.
 
 We eventually turned it into a product called Seller Manager Lite (SML), which aims to help small-scale handphone resellers manage their sales and inventory with ease.
-Users interact with it using a Command Line Interface (CLI) and it has a Graphical User Interface (GUI) created with JavaFX. It is written in Java, and has about 10,000 lines of code.
+Users interact with it using a Command Line Interface (CLI) and it has a Graphical User Interface (GUI) created with JavaFX. It is written in Java, and has more than 15,000 lines of code.
 
 My role was being in charge of the Logic component, implementing the commands and parsers for Customer, Phone and Order data.
-Additionally, I was tasked to implement an undo/redo feature, find feature and copy feature.
+Additionally, I was tasked to implement an undo/redo, find (search) and copy commands.
 
 
 
@@ -57,7 +57,6 @@ https://github.com/AY1920S1-CS2103T-T09-4/main/pull/119[#119], https://github.co
 ** Command Tests: https://github.com/AY1920S1-CS2103T-T09-4/main/pull/168[#168]
 ** Model Manager: https://github.com/AY1920S1-CS2103T-T09-4/main/pull/106[#106]
 
-
 * *Other contributions*:
 
 ** Project management:
@@ -73,8 +72,8 @@ https://github.com/AY1920S1-CS2103T-T09-4/main/pull/119[#119], https://github.co
 *** Restructured User Guide to make it more reader-friendly: https://github.com/AY1920S1-CS2103T-T09-4/main/pull/168/files[#168], https://github.com/AY1920S1-CS2103T-T09-4/main/pull/258[#258]
 
 ** Community:
-*** PRs reviewed (with non-trivial review comments): https://github.com/AY1920S1-CS2103T-T09-4/main/pull/137[#137]
-*** Reported bugs and suggestions for other teams in the class: #
+*** PRs reviewed (with non-trivial review comments): https://github.com/AY1920S1-CS2103T-T09-4/main/pull/73[#73], https://github.com/AY1920S1-CS2103T-T09-4/main/pull/76[#76], https://github.com/AY1920S1-CS2103T-T09-4/main/pull/137[#137], https://github.com/AY1920S1-CS2103T-T09-4/main/pull/145/files[#145]
+*** Reported bugs and suggestions for other teams in the class: https://github.com/AY1920S1-CS2103T-T09-2/main/issues/217[ExerHealth #217], https://github.com/AY1920S1-CS2103T-T09-2/main/issues/224[ExerHealth #224]
 
 ** Tools:
 *** Set-up Netlify
